cloud-infra-macros/tests/fails/visibility_timeout_boundary_high.stderr
error: proc macro panicked
 --> tests/fails/visibility_timeout_boundary_high.rs:4:19
  |
4 |     let timeout = visibility_timeout!(43201);
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: value should be at most 43200
